--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@angular/platform-browser-dynamic": "~8.2.0",
         "@angular/router": "~8.2.0",
         "@azure/ng-deploy": "^0.2.3",
+        "@babel/compat-data": "^7.8.0",
         "@swimlane/ngx-datatable": "^16.0.3",
         "jw-bootstrap-switch-ng2": "^2.0.5",
         "material-design-icons": "^3.0.1",
