--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Hellas-COVID19-3D-printing-inventory",
+    "name": "hellas-covid19-printing-inventory",
     "version": "1.0.0",
     "repository": {
         "type": "git",
@@ -21,12 +21,15 @@
         "@angular/compiler": "~8.2.0",
         "@angular/core": "~8.2.0",
         "@angular/forms": "~8.2.0",
+        "@angular/localize": "^9.1.1",
         "@angular/platform-browser": "~8.2.0",
         "@angular/platform-browser-dynamic": "~8.2.0",
         "@angular/router": "~8.2.0",
         "@azure/ng-deploy": "^0.2.3",
         "@babel/compat-data": "^7.8.0",
+        "@ng-bootstrap/ng-bootstrap": "^6.0.2",
         "@swimlane/ngx-datatable": "^16.0.3",
+        "bootstrap": "^4.4.1",
         "jw-bootstrap-switch-ng2": "^2.0.5",
         "material-design-icons": "^3.0.1",
         "rxjs": "~6.4.0",
@@ -52,7 +55,7 @@
         "protractor": "~5.4.0",
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
-        "typescript": "~3.5.3"
+        "typescript": "3.8.3"
     },
     "resolutions": {
         "@babel/preset-env": "7.5.5"
