--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "@azure/ng-deploy": "^0.2.3",
-    "@babel/compat-data": "^7.8.0",
+    "@babel/compat-data": "^7.9.0",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@swimlane/ngx-datatable": "^16.0.3",
     "bootstrap": "^4.4.1",
@@ -34,31 +34,31 @@
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.5.5",
     "scss": "^0.2.4",
-    "tslib": "^1.10.0",
+    "tslib": "^1.11.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "0.901.1",
+    "@angular-devkit/build-angular": "^0.901.1",
+    "@angular-devkit/core": "9.1.1",
+    "@angular-devkit/schematics": "9.1.1",
     "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
-    "@angular-devkit/architect": "~0.803.20",
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular-devkit/core": "~8.3.20",
-    "@angular-devkit/schematics": "~8.3.20",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/jasmine": "3.5.10",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^13.11.1",
     "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^5.0.1",
+    "karma": "^5.0.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "^3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
+    "protractor": "^5.4.3",
+    "ts-node": "^8.8.2",
+    "tslint": "^6.1.1",
     "typescript": "3.8.3"
   },
   "resolutions": {
