--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   "dependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
     "@angular/animations": "~9.1.1",
+    "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
     "@angular/forms": "~9.1.1",
     "@angular/localize": "^9.1.1",
+    "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "@azure/ng-deploy": "^0.2.3",
     "@babel/compat-data": "^7.9.0",
-    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@swimlane/ngx-datatable": "^16.0.3",
-    "bootstrap": "^4.4.1",
     "jw-bootstrap-switch-ng2": "^2.0.5",
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.5.5",
