--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@angular/router": "~9.1.1",
     "@azure/ng-deploy": "^0.2.3",
     "@babel/compat-data": "^7.9.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@swimlane/ngx-datatable": "^16.0.3",
+    "bootstrap": "^4.4.1",
     "jw-bootstrap-switch-ng2": "^2.0.5",
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.5.5",
