--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
-    "@angular/animations": "~9.1.1",
+    "@angular/animations": "^9.1.3",
     "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
@@ -34,6 +34,7 @@
     "bootstrap": "^4.4.1",
     "jw-bootstrap-switch-ng2": "^2.0.5",
     "material-design-icons": "^3.0.1",
+    "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.5",
     "scss": "^0.2.4",
     "tslib": "^1.11.1",
